Display Dates correctly. Fix alignment in transaction header.

--- a/ExpenseMeMVC/Content/Site.css
+++ b/ExpenseMeMVC/Content/Site.css
@@ -48,3 +48,7 @@ div.modal-header {
 .list-group-item:hover {
     background-color:azure;
 }
+
+.readonly {
+    padding-top: 5px;
+}
